# saltwater

./: .gitattributes  .gitignore  README.md  setup_x64.bat
data/: android.config
data/graphic/models/: envsphere.mtl  gizmo.mtl
data/graphic/shaders/: common.glsl  common_gbuffer.glsl  common_global.glsl  common_light.glsl  common_material.glsl  common_raycast.glsl  cs_bilateral_blur.glsl  cs_brdf.glsl  cs_esm.glsl  cs_gaussian_blur_r32f.glsl  cs_gaussian_blur_rgba16f.glsl  cs_gaussian_blur_rgba8.glsl  cs_global.glsl  cs_histogram_build.glsl  cs_histogram_evaluate.glsl  cs_histogram_merge.glsl  cs_kinect.glsl  cs_kinect_bilateral_filter.glsl  cs_kinect_downsample.glsl  cs_kinect_integrate_volume.glsl  cs_kinect_integrate_volume_old.glsl  cs_kinect_normal_map.glsl  cs_kinect_raycast.glsl  cs_kinect_raycast_pyramid.glsl  cs_kinect_vertex_map.glsl  cs_kinect_volume.glsl  cs_light_arealight_apply.glsl  cs_light_arealight_blur.glsl  cs_light_arealight_blur2.glsl  cs_light_arealight_blur_background.glsl  cs_light_arealight_blur_foreground.glsl  cs_light_arealight_combine.glsl  cs_light_arealight_down.glsl  cs_light_arealight_filter.glsl  cs_picking.glsl  cs_selection.glsl  cs_volume_lighting.glsl  cs_volume_scattering.glsl  cs_voxel.glsl  fs_apply_differential_gbuffer.glsl  (+104 more)
data/graphic/textures/: Consolas.tga  dummy_1d.tga  dummy_2d.tga  dummy_cubemap.dds
data/plugins/light_estimation_lut/: fs.glsl  gs.glsl  vs.glsl
data/plugins/light_estimation_stitching/: cs_cube2pano.glsl  fs.glsl  gs.glsl  vs.glsl
data/plugins/slam/: cs_32To16Bit.glsl  cs_convert_arkit_depth.glsl  cs_register_depth.glsl  cs_shift_depth.glsl  cs_yuv_to_rgb.glsl
data/plugins/stereo/: cs_Compare_Depth.glsl  cs_Depth_Rect2Orig.glsl  cs_Disp_to_Depth.glsl  cs_Disparity_to_Depth.glsl  cs_Down_Sampling.glsl  cs_Rect_Planar.glsl  cs_Rectification_Planar.glsl  cs_Up_Sampling.glsl  cs_rectification.glsl  cs_rectification_planar.glsl  cs_texture_copy_origimg.glsl
intern/project/: bin
intern/project/droid/: build.gradle  saltwater.sln
intern/project/droid/app/: CMakeLists.txt  build.gradle
intern/project/droid/app/src/main/: AndroidManifest.xml
intern/project/droid/app/src/main/java/de/tu_ilmenau/saltwater/: GameActivity.java
intern/project/droid/app/src/main/java/de/tuilmenau/saltwater/: GameActivity.java  PermissionFragment.java  PermissionHelper.java
intern/project/droid/app/src/main/res/drawable/: ic_launcher_foreground.xml
intern/project/droid/app/src/main/res/layout/: activity_main.xml
intern/project/droid/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
intern/project/droid2/app/: CMakeLists.txt  build.gradle
intern/project/droid2/app/src/androidTest/java/de/tu_ilmenau/saltwater/: ExampleInstrumentedTest.java
intern/project/droid2/app/src/main/cpp/: native-lib.cpp
intern/project/droid2/app/src/main/java/de/tu_ilmenau/saltwater/: MainActivity.java
intern/project/droid2/app/src/main/res/layout/: activity_main.xml
intern/project/droid3/app/: CMakeLists.txt
intern/project/droid3/app/src/main/: AndroidManifest.xml
intern/project/droid3/app/src/main/cpp/: native-lib.cpp
intern/project/droid3/app/src/main/java/de/tu_ilmenau/saltwater/: MainActivity.java
intern/project/droid3/app/src/test/java/de/tu_ilmenau/saltwater/: ExampleUnitTest.java
intern/project/vs2013/: saltwater.sln
intern/project/win/: saltwater.sln
intern/src/app/: app_application.cpp  app_application.h  app_config.h  app_debug_state.cpp  app_debug_state.h  app_exit_state.cpp  app_exit_state.h  app_intro_state.cpp  app_intro_state.h  app_load_map_state.cpp  app_load_map_state.h  app_main_menu_state.cpp  app_main_menu_state.h  app_play_state.cpp  app_play_state.h  app_start_state.cpp  app_start_state.h  app_state.h  app_unload_map_state.cpp  app_unload_map_state.h
intern/src/app_droid/: android_native_app_glue.c  android_native_app_glue.h  app_application.cpp  app_application.h  app_droid.cpp  app_exit_state.cpp  app_exit_state.h  app_init_state.cpp  app_init_state.h  app_intro_state.cpp  app_intro_state.h  app_jni_interface.cpp  app_jni_interface.h  app_load_map_state.cpp  app_load_map_state.h  app_main.cpp  app_main_menu_state.cpp  app_main_menu_state.h  app_play_state.cpp  app_play_state.h  app_precompiled.h  app_start_state.cpp  app_start_state.h  app_state.h  app_unload_map_state.cpp  app_unload_map_state.h  main.cpp  pch.h
intern/src/base/: base_aabb2.h  base_aabb3.h  base_basic.h  base_circle.h  base_clock.h  base_component.h  base_component_manager.cpp  base_component_manager.h  base_compression.cpp  base_compression.h  base_config.h  base_console.cpp  base_console.h  base_coordinate_system.h  base_crc.h  base_defines.h  base_delegate.h  base_event_queue.h  base_exception.h  base_export.h  base_frustum.h  base_getopt.cpp  base_getopt.h  base_include_glm.h  base_include_json.h  base_input_event.h  base_is_array.h  base_is_bool.h  base_is_class.h  base_is_floating_point.h  base_is_integral.h  base_is_pointer.h  base_is_primitive.h  base_is_reference.h  base_is_std.h  base_is_union.h  base_json.cpp  base_json.h  base_lib_glm.h  base_logical_arithmetic.h  (+52 more)
intern/src/camera/: cam_ar_control.cpp  cam_ar_control.h  cam_control.cpp  cam_control.h  cam_control_manager.cpp  cam_control_manager.h  cam_editor_control.cpp  cam_editor_control.h  cam_fly_control.cpp  cam_fly_control.h  cam_game_control.cpp  cam_game_control.h  cam_precompiled.cpp
intern/src/core/: core_asset_generator.h  core_asset_importer.cpp  core_asset_importer.h  core_asset_manager.cpp  core_asset_manager.h  core_config.h  core_console.cpp  core_console.h  core_export.h  core_jni_interface.cpp  core_jni_interface.h  core_lua_argument.cpp  core_lua_argument.h  core_lua_export.cpp  core_lua_export.h  core_lua_main.cpp  core_lua_main.h  core_lua_result.cpp  core_lua_result.h  core_lua_state.cpp  core_lua_state.h  core_lua_typedef.h  core_material_importer.cpp  core_material_importer.h  core_plugin.h  (+18 more)
intern/test/: main.cpp  test_base_string.cpp  test_main.cpp  test_precompiled.cpp
src/script/: script_ar_controller_script.h
(+1774 files in other folders)
